# ng-bazel-test

./: README.md  angular.json  angular.json.bak  karma.conf.js  package-lock.json  package.json  tsconfig.json
e2e/src/: app.e2e-spec.ts
src/: BUILD.bazel  index.html  rollup.config.js
src/app/: BUILD.bazel  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
src/shared/: BUILD.bazel  shared.module.ts  test-directive.ts
