package(default_visibility = ["//visibility:public"])

load("@npm_angular_bazel//:index.bzl", "ng_module")


ng_module(
    name = "shared",
    module_name = "@shared",
    srcs = glob(
        include = ["*.ts"],
        exclude = [
        ],
    ),
    assets = [],
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@types",
        "@npm//rxjs",
    ],
)